source/style/markdown.css
/* PrismJS 1.9.0
http://prismjs.com/download.html?themes=prism-okaidia&languages=markup+css+clike+javascript+bash+ruby+diff+go+graphql+java+json+php+powershell+pug+python+jsx+rust+scss+scala+swift+typescript */
/**
 * okaidia theme for JavaScript, CSS and HTML
 * Loosely based on Monokai textmate theme by http://www.monokai.nl/
 * @author ocodia
 */

.refined-twitter_markdown code {
	font-family: SFMono-Regular, Consolas, 'Liberation Mono', Menlo, Courier,
		monospace;
	background-color: rgba(27, 31, 35, 0.05);
	padding: 0.1em 0.4em;
	margin: 0;
	font-size: 90%;
}

.refined-twitter_markdown {
	white-space: normal !important;
}

.refined-twitter_markdown h1,
.refined-twitter_markdown h2,
.refined-twitter_markdown h3,
.refined-twitter_markdown h4 {
	color: #14171a;
	display: inline-block;
	margin-top: 6px;
	margin-bottom: 6px;
}

.refined-twitter_markdown blockquote {
	color: #6a737d;
	margin-top: 5px;
	padding-left: 1em;
	border-left: 0.25em solid #dfe2e5;
}

.refined-twitter_markdown blockquote p {
	height: 20px;
}

.refined-twitter_markdown ul,
.refined-twitter_markdown ol {
	margin-top: 5px;
	margin-bottom: 5px;
}

.refined-twitter_markdown ul {
	list-style: inside;
}

.refined-twitter_markdown del {
	text-decoration: line-through;
	color: #6a737d;
}

.refined-twitter_highlight code[class*='language-'],
.refined-twitter_highlight pre[class*='language-'] {
	font-size: 100%;
	color: #c5c8c6;
	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
	font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
	line-height: 1.5;
	position: relative;

	-moz-tab-size: 4;
	-o-tab-size: 4;
	tab-size: 4;

	-webkit-hyphens: none;
	-moz-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;

	overflow: auto;
	border-radius: 0.3em;

	padding: 3em 1em 1em;
}

.refined-twitter_highlight code[class*='language-'] {
	padding: 0;
}

:not(pre) > code[class*='language-'],
pre[class*='language-'] {
	background: #1d1f21;
}

/* Inline code */
:not(pre) > code[class*="language-"] {
	padding: .1em;
	border-radius: .3em;
}

.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
	color: #7C7C7C;
}

.token.punctuation {
	color: #c5c8c6;
}

.namespace {
	opacity: .7;
}

.token.property,
.token.keyword,
.token.tag {
	color: #96CBFE;
}

.token.class-name {
	color: #FFFFB6;
	text-decoration: underline;
}

.token.boolean,
.token.constant {
	color: #99CC99;
}

.token.symbol,
.token.deleted {
	color: #f92672;
}

.token.number {
	color: #FF73FD;
}

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
	color: #A8FF60;
}

.token.variable {
	color: #C6C5FE;
}

.token.operator {
	color: #EDEDED;
}

.token.entity {
	color: #FFFFB6;
/* text-decoration: underline; */
}

.token.url {
	color: #96CBFE;
}

.language-css .token.string,
.style .token.string {
	color: #87C38A;
}

.token.atrule,
.token.attr-value {
	color: #F9EE98;
}

.token.function {
	color: #DAD085;
}

.token.regex {
	color: #E9C062;
}

.token.important {
	color: #fd971f;
}

.token.important,
.token.bold {
	font-weight: bold;
}
.token.italic {
	font-style: italic;
}

.token.entity {
	cursor: help;
}

.refined-twitter_highlight {
	position: relative;
	border-radius: 0.3em;
	overflow: hidden;
	font-size: 14px;
	margin-top: 6px;
	margin-bottom: 6px;
}

.refined-twitter_highlight-lang {
	position: absolute;
	right: 0;
	top: 0;
	width: 100%;
	height: 30px;
	line-height: 30px;
	font-size: 10px;
	white-space: initial;
	padding-right: 10px;
	box-sizing: border-box;
	text-align: right;
	color: #ffffff6e;
	background: #ffffff12;
	z-index: 1;
}

